tests/spec/parse/snapshots/or_pattern_booleans.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(a: bool, b: bool) -> string {
    match (a, b) {
      (true, true) | (false, false) => "same",
      (true, false) | (false, true) => "different",
    }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "a",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "bool",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 12,
                            byte_length: 4,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
            Binding {
                pattern: Identifier {
                    identifier: "b",
                    span: Span {
                        file_id: 0,
                        byte_offset: 18,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "bool",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 21,
                            byte_length: 4,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Constructor {
            name: "string",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 30,
                byte_length: 6,
            },
        },
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Match {
                        subject: Tuple {
                            elements: [
                                Identifier {
                                    value: "a",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 48,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                                Identifier {
                                    value: "b",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 51,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                            ],
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 47,
                                byte_length: 6,
                            },
                        },
                        arms: [
                            MatchArm {
                                pattern: Or {
                                    patterns: [
                                        Tuple {
                                            elements: [
                                                Literal {
                                                    literal: Boolean(
                                                        true,
                                                    ),
                                                    ty: Var {
                                                        id: uninferred,
                                                    },
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 61,
                                                        byte_length: 4,
                                                    },
                                                },
                                                Literal {
                                                    literal: Boolean(
                                                        true,
                                                    ),
                                                    ty: Var {
                                                        id: uninferred,
                                                    },
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 67,
                                                        byte_length: 4,
                                                    },
                                                },
                                            ],
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 60,
                                                byte_length: 12,
                                            },
                                        },
                                        Tuple {
                                            elements: [
                                                Literal {
                                                    literal: Boolean(
                                                        false,
                                                    ),
                                                    ty: Var {
                                                        id: uninferred,
                                                    },
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 76,
                                                        byte_length: 5,
                                                    },
                                                },
                                                Literal {
                                                    literal: Boolean(
                                                        false,
                                                    ),
                                                    ty: Var {
                                                        id: uninferred,
                                                    },
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 83,
                                                        byte_length: 5,
                                                    },
                                                },
                                            ],
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 75,
                                                byte_length: 14,
                                            },
                                        },
                                    ],
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 60,
                                        byte_length: 29,
                                    },
                                },
                                expression: Literal {
                                    literal: String {
                                        value: "same",
                                        raw: false,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 93,
                                        byte_length: 6,
                                    },
                                },
                            },
                            MatchArm {
                                pattern: Or {
                                    patterns: [
                                        Tuple {
                                            elements: [
                                                Literal {
                                                    literal: Boolean(
                                                        true,
                                                    ),
                                                    ty: Var {
                                                        id: uninferred,
                                                    },
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 106,
                                                        byte_length: 4,
                                                    },
                                                },
                                                Literal {
                                                    literal: Boolean(
                                                        false,
                                                    ),
                                                    ty: Var {
                                                        id: uninferred,
                                                    },
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 112,
                                                        byte_length: 5,
                                                    },
                                                },
                                            ],
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 105,
                                                byte_length: 13,
                                            },
                                        },
                                        Tuple {
                                            elements: [
                                                Literal {
                                                    literal: Boolean(
                                                        false,
                                                    ),
                                                    ty: Var {
                                                        id: uninferred,
                                                    },
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 122,
                                                        byte_length: 5,
                                                    },
                                                },
                                                Literal {
                                                    literal: Boolean(
                                                        true,
                                                    ),
                                                    ty: Var {
                                                        id: uninferred,
                                                    },
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 129,
                                                        byte_length: 4,
                                                    },
                                                },
                                            ],
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 121,
                                                byte_length: 13,
                                            },
                                        },
                                    ],
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 105,
                                        byte_length: 29,
                                    },
                                },
                                expression: Literal {
                                    literal: String {
                                        value: "different",
                                        raw: false,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 138,
                                        byte_length: 11,
                                    },
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 41,
                            byte_length: 113,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 37,
                    byte_length: 119,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 155,
        },
    },
]
