tests/spec/parse/snapshots/or_pattern_enum_variants.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  enum Color { Red, Green, Blue }
  fn test(c: Color) -> string {
    match c {
      Red | Green => "warm",
      Blue => "cool",
    }
  }
---
[
    Enum {
        doc: None,
        attributes: [],
        name: "Color",
        name_span: Span {
            file_id: 0,
            byte_offset: 6,
            byte_length: 5,
        },
        generics: [],
        variants: [
            EnumVariant {
                doc: None,
                attributes: [],
                name: "Red",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 14,
                    byte_length: 3,
                },
                fields: Unit,
            },
            EnumVariant {
                doc: None,
                attributes: [],
                name: "Green",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 19,
                    byte_length: 5,
                },
                fields: Unit,
            },
            EnumVariant {
                doc: None,
                attributes: [],
                name: "Blue",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 26,
                    byte_length: 4,
                },
                fields: Unit,
            },
        ],
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 31,
        },
    },
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 36,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "c",
                    span: Span {
                        file_id: 0,
                        byte_offset: 41,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Color",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 44,
                            byte_length: 5,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Constructor {
            name: "string",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 54,
                byte_length: 6,
            },
        },
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Match {
                        subject: Identifier {
                            value: "c",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 71,
                                byte_length: 1,
                            },
                            resolution: Unresolved,
                        },
                        arms: [
                            MatchArm {
                                pattern: Or {
                                    patterns: [
                                        EnumVariant {
                                            identifier: "Red",
                                            fields: [],
                                            rest: false,
                                            resolution: Unresolved,
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 79,
                                                byte_length: 3,
                                            },
                                        },
                                        EnumVariant {
                                            identifier: "Green",
                                            fields: [],
                                            rest: false,
                                            resolution: Unresolved,
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 85,
                                                byte_length: 5,
                                            },
                                        },
                                    ],
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 79,
                                        byte_length: 11,
                                    },
                                },
                                expression: Literal {
                                    literal: String {
                                        value: "warm",
                                        raw: false,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 94,
                                        byte_length: 6,
                                    },
                                },
                            },
                            MatchArm {
                                pattern: EnumVariant {
                                    identifier: "Blue",
                                    fields: [],
                                    rest: false,
                                    resolution: Unresolved,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 106,
                                        byte_length: 4,
                                    },
                                },
                                expression: Literal {
                                    literal: String {
                                        value: "cool",
                                        raw: false,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 114,
                                        byte_length: 6,
                                    },
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 65,
                            byte_length: 60,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 61,
                    byte_length: 66,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 33,
            byte_length: 94,
        },
    },
]
